# resonance

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  output_backend_manager.cpp  output_backend_manager.h
